src/main/default/objects/Price_Book_Item__c/Price_Book_Item__c.object-meta.xml
<CustomObject>
    <label>Price Book Item</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01IF0000002KqRcMAK_00NF000000D7FdUMAV</fullName>
        <active>true</active>
        <field>Price_Book_Rule__c.Price_Book_Item__c</field>
        <filterItems>
            <field>Price_Book_Item__c.Price_Book__c</field>
            <operation>equals</operation>
            <valueField>$Source.Price_Book__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Rule_Price Book Item</name>
        <sourceObject>Price_Book_Rule__c</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01Ii00000004oehEAA_00Ni0000000LddCEAS</fullName>
        <active>true</active>
        <field>Crew_Planning__c.Role_on_Job__c</field>
        <filterItems>
            <field>Price_Book_Item__c.Ticket_Item_Record_Type__c</field>
            <operation>contains</operation>
            <value>Labor</value>
        </filterItems>
        <filterItems>
            <field>Price_Book_Item__c.IsArchived__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Job Crew_Role on Job</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01Ii00000005Z99EAE_00Ni0000001Ytl2EAC</fullName>
        <active>true</active>
        <field>Ticket_Item__c.Price_Book_Item__c</field>
        <filterItems>
            <field>Price_Book_Item__c.Price_Book_Catalog_Item_Unique__c</field>
            <operation>equals</operation>
            <valueField>Price_Book_Item__c.Parent_Price_Book_Item__r.Price_Book_Catalog_Item_Unique__c</valueField>
        </filterItems>
        <filterItems>
            <field>Price_Book_Item__c.Id</field>
            <operation>notEqual</operation>
            <valueField>Price_Book_Item__c.Parent_Price_Book_Item__r.Id</valueField>
        </filterItems>
        <filterItems>
            <field>Price_Book_Item__c.Parent_Price_Book_Item__r.Requires_Parent_Item__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>Price_Book_Item__c.IsArchived__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Ticket Item_Price Book Item</name>
    </namedFilters>
    <pluralLabel>Price Book Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>