src/main/default/objects/Price_Book_Item__c/fields/Breadcrumb__c.field-meta.xml
<CustomField>
    <fullName>Breadcrumb__c</fullName>
    <formula>Catalog_Item__r.Breadcrumb__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Unique identifier used to categorize the item in price book item lists.</inlineHelpText>
    <label>Breadcrumb</label>
    <type>Text</type>
</CustomField>