src/main/default/objects/Price_Book_Item__c/fields/Catalog_Classification__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Classification__c</fullName>
    <formula>CASESAFEID(Catalog_Item__r.Classification__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Catalog classification for the price book item. The price book item inherits this classification from the linked catalog item.</inlineHelpText>
    <label>Catalog Classification</label>
    <type>Text</type>
</CustomField>