src/main/default/objects/Price_Book_Item__c/fields/Catalog_Cost__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Cost__c</fullName>
    <formula>Catalog_Item__r.Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Cost of purchasing the price book item. The price book item inherits this cost from the linked catalog item.</inlineHelpText>
    <label>Catalog Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>