src/main/default/objects/Price_Book_Item__c/fields/Catalog_Description__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Description__c</fullName>
    <formula>Catalog_Item__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Catalog description for the price book item. The price book item inherits this description from the linked catalog item by default. If the price book item has a description override, the price book item uses that description.</inlineHelpText>
    <label>Catalog Description</label>
    <type>Text</type>
</CustomField>