src/main/default/objects/Price_Book_Item__c/fields/Catalog_Item__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Item__c</fullName>
    <inlineHelpText>Catalog item linked to the price book item. The price book item inherits information such as unit of measurement and cost from the linked catalog item.</inlineHelpText>
    <label>Catalog Item</label>
    <referenceTo>Catalog_Item__c</referenceTo>
    <relationshipLabel>Price Book Items</relationshipLabel>
    <relationshipName>Price_Book_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>