src/main/default/objects/Price_Book_Item__c/fields/Catalog_Item_Code__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Item_Code__c</fullName>
    <formula>Catalog_Item__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Catalog item code for the price book item. The price book item inherits this item code from the linked catalog item.</inlineHelpText>
    <label>Catalog Item Code</label>
    <type>Text</type>
</CustomField>