src/main/default/objects/Price_Book_Item__c/fields/Catalog_Price_Book_Index__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Price_Book_Index__c</fullName>
    <label>Catalog Price Book Index</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>