src/main/default/objects/Price_Book_Item__c/fields/Catalog_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Record_Type__c</fullName>
    <formula>Catalog_Item__r.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Catalog record type for the price book item. The price book item inherits this record type from the linked catalog item.</inlineHelpText>
    <label>Catalog Record Type</label>
    <type>Text</type>
</CustomField>