src/main/default/objects/Price_Book_Item__c/fields/Catalog_UOM__c.field-meta.xml
<CustomField>
    <fullName>Catalog_UOM__c</fullName>
    <formula>TEXT(Catalog_Item__r.UOM__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Unit of measurement used for the price book item. The price book item inherits this unit of measurement from the linked catalog item.</inlineHelpText>
    <label>Catalog UOM</label>
    <type>Text</type>
</CustomField>