src/main/default/objects/Price_Book_Item__c/fields/CatalogItemPriceBook__c.field-meta.xml
<CustomField>
    <fullName>CatalogItemPriceBook__c</fullName>
    <formula>CASESAFEID( Catalog_Item__c) + CASESAFEID(Price_Book__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CatalogItemPriceBook</label>
    <type>Text</type>
</CustomField>