src/main/default/objects/Price_Book_Item__c/fields/Cost_Plus_Markup_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cost_Plus_Markup_Amount__c</fullName>
    <inlineHelpText>Dollar amount that the price book item is marked up.</inlineHelpText>
    <label>Cost Plus Markup Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>