src/main/default/objects/Price_Book_Item__c/fields/Cost_Plus_Markup_Percent__c.field-meta.xml
<CustomField>
    <fullName>Cost_Plus_Markup_Percent__c</fullName>
    <inlineHelpText>Percentage that the price book item is marked up.</inlineHelpText>
    <label>Cost Plus Markup Percent</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>