src/main/default/objects/Price_Book_Item__c/fields/Default_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Default_Quantity__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>Default quantity added when adding the item to a ticket.</inlineHelpText>
    <label>Default Quantity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>