src/main/default/objects/Price_Book_Item__c/fields/Description_Override__c.field-meta.xml
<CustomField>
    <fullName>Description_Override__c</fullName>
    <description>Complete this field to override the catalog item description within this price book</description>
    <inlineHelpText>Catalog description for the price book item. This description overrides the catalog description inherited from the linked catalog item.</inlineHelpText>
    <label>Description Override</label>
    <length>255</length>
    <type>Text</type>
</CustomField>