src/main/default/objects/Price_Book_Item__c/fields/Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percent__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Percentage discount granted on the price book item. Users can change the discount when adding a ticket if granted sufficient permissions.</inlineHelpText>
    <label>Discount Percent</label>
    <precision>14</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>