src/main/default/objects/Price_Book_Item__c/fields/Discounted_Price__c.field-meta.xml
<CustomField>
    <fullName>Discounted_Price__c</fullName>
    <formula>IF(IsPickVal(Pricing_Method__c,"Straight Price"), Price__c  * (1 -  Discount_Percent__c ), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Discounted price of the price book item.</inlineHelpText>
    <label>Discounted Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>