src/main/default/objects/Price_Book_Item__c/fields/Enable_Dynamic_Parenting__c.field-meta.xml
<CustomField>
    <fullName>Enable_Dynamic_Parenting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Dynamic Parenting</label>
    <type>Checkbox</type>
</CustomField>