src/main/default/objects/Price_Book_Item__c/fields/Included_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Included_Quantity__c</fullName>
    <inlineHelpText>Quantity of the price book item given to the customer at no charge.</inlineHelpText>
    <label>Included Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>