src/main/default/objects/Price_Book_Item__c/fields/Locked_Description__c.field-meta.xml
<CustomField>
    <fullName>Locked_Description__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is checked, the user cannot change the description when the price book item is used on a ticket.</description>
    <inlineHelpText>If selected, users cannot changed the description for the price book item when adding a ticket.</inlineHelpText>
    <label>Locked Description</label>
    <type>Checkbox</type>
</CustomField>