src/main/default/objects/Price_Book_Item__c/fields/Locked_Discount__c.field-meta.xml
<CustomField>
    <fullName>Locked_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, users cannot change the discount granted on the price book item when adding a ticket.</inlineHelpText>
    <label>Locked Discount</label>
    <type>Checkbox</type>
</CustomField>