src/main/default/objects/Price_Book_Item__c/fields/Locked_Price_Markup__c.field-meta.xml
<CustomField>
    <fullName>Locked_Price_Markup__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, users cannot change the price charged for the price book item when adding a ticket.</inlineHelpText>
    <label>Locked Price/Markup</label>
    <type>Checkbox</type>
</CustomField>