src/main/default/objects/Price_Book_Item__c/fields/Maximum_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Quantity__c</fullName>
    <inlineHelpText>Maximum quantity of the price book item that users can add to a ticket.</inlineHelpText>
    <label>Maximum Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>