src/main/default/objects/Price_Book_Item__c/fields/Minimum_Charge__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Charge__c</fullName>
    <inlineHelpText>Minimum price that users can charge for the price book item.</inlineHelpText>
    <label>Minimum Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>