src/main/default/objects/Price_Book_Item__c/fields/Minimum_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Quantity__c</fullName>
    <inlineHelpText>Minimum quantity of the item that users can add to a ticket.</inlineHelpText>
    <label>Minimum Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>