src/main/default/objects/Price_Book_Item__c/fields/Override_Cost_Method__c.field-meta.xml
<CustomField>
    <fullName>Override_Cost_Method__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Override Cost Method</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Override_Config__c.Override_Type__c</field>
            <operation>equals</operation>
            <value>Cost</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Override_Config__c</referenceTo>
    <relationshipLabel>Price Book Items (Override Cost Method)</relationshipLabel>
    <relationshipName>Price_Book_Items_OverrideCost</relationshipName>
    <type>Lookup</type>
</CustomField>