src/main/default/objects/Price_Book_Item__c/fields/Parent_Price_Book_Item__c.field-meta.xml
<CustomField>
    <fullName>Parent_Price_Book_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Parent price book item for the price book item. When a price book item has a parent, the parent gets added automatically to every ticket where the price book item is added.</inlineHelpText>
    <label>Parent Price Book Item</label>
    <referenceTo>Price_Book_Item__c</referenceTo>
    <relationshipLabel>Child Price Book Items</relationshipLabel>
    <relationshipName>Child_Price_Book_Items</relationshipName>
    <type>Lookup</type>
</CustomField>