src/main/default/objects/Price_Book_Item__c/fields/Parent_Price_Book_Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Parent_Price_Book_Item_Description__c</fullName>
    <formula>Parent_Price_Book_Item__r.Catalog_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Catalog description for the price book item's parent price book item.</inlineHelpText>
    <label>Parent Price Book Item Description</label>
    <type>Text</type>
</CustomField>