src/main/default/objects/Price_Book_Item__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Price charged for the price book item. Users can change the price when adding a ticket if granted sufficient permissions.</inlineHelpText>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>