src/main/default/objects/Price_Book_Item__c/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <inlineHelpText>Price book in which the price book item is included.</inlineHelpText>
    <label>Price Book</label>
    <referenceTo>Price_Book__c</referenceTo>
    <relationshipLabel>Price Book Items</relationshipLabel>
    <relationshipName>Price_Book_Items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>