src/main/default/objects/Price_Book_Item__c/fields/Price_Book_Catalog_Item_Unique__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Catalog_Item_Unique__c</fullName>
    <description>This field gets automatically populated on create/edit of a price book item.  It is the concatenation of catalog item name and price book name.  It must be unique and therefore this enforces uniqueness of a catalog item within a price book.  In other words, we do not allow the same catalog item to be priced multiple times within the same price book.  This field never gets displayed to the user.</description>
    <inlineHelpText>Unique identifier for the price book item.</inlineHelpText>
    <label>Price Book Catalog Item Unique</label>
    <length>160</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>