src/main/default/objects/Price_Book_Item__c/fields/Pricing_Method__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Method__c</fullName>
    <inlineHelpText>Pricing method used for the price book item. Select "Straight Price" to set a standard price. Select "Cost Plus Markup Amount" to mark up the item by a dollar amount. Select "Cost Plus Markup Percent" to mark up the item by a percentage of cost.</inlineHelpText>
    <label>Pricing Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Straight Price</fullName>
                <default>true</default>
                <label>Straight Price</label>
            </value>
            <value>
                <fullName>Cost Plus Markup Percent</fullName>
            </value>
            <value>
                <fullName>Cost Plus Markup Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>