src/main/default/objects/Price_Book_Item__c/fields/Required_Item__c.field-meta.xml
<CustomField>
    <fullName>Required_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this is checked, this item will automatically be added to all new Tickets.</description>
    <inlineHelpText>If selected, the item gets added automatically to all new tickets.</inlineHelpText>
    <label>Required Item</label>
    <type>Checkbox</type>
</CustomField>