src/main/default/objects/Price_Book_Item__c/fields/Requires_Parent_Item__c.field-meta.xml
<CustomField>
    <fullName>Requires_Parent_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, the item and its parent price book item get added automatically to all new tickets.</inlineHelpText>
    <label>Requires Parent Item</label>
    <type>Checkbox</type>
</CustomField>