src/main/default/objects/Price_Book_Item__c/fields/Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Number__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Number used to determine the order in which the item displays in price book item lists.</inlineHelpText>
    <label>Sequence Number</label>
    <precision>16</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Number</type>
</CustomField>