src/main/default/objects/Price_Book_Item__c/fields/Standby_Price__c.field-meta.xml
<CustomField>
    <fullName>Standby_Price__c</fullName>
    <inlineHelpText>Price charged for the price book item when it is on standby for a job and not in use.</inlineHelpText>
    <label>Standby Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>