src/main/default/objects/Price_Book_Item__c/fields/Surcharge_Env__c.field-meta.xml
<CustomField>
    <fullName>Surcharge_Env__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, the price book item has a surcharge for environmental cleanup costs. The surcharge is defined in the "Surcharge Rate Env" field for the item's price book.</inlineHelpText>
    <label>Surcharge Env</label>
    <type>Checkbox</type>
</CustomField>