src/main/default/objects/Price_Book_Item__c/fields/Surcharge_Fuel__c.field-meta.xml
<CustomField>
    <fullName>Surcharge_Fuel__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, the price book item has a surcharge for fuel costs. The surcharge is defined in the "Surcharge Rate Fuel" field for the item's price book.</inlineHelpText>
    <label>Surcharge Fuel</label>
    <type>Checkbox</type>
</CustomField>