src/main/default/objects/Price_Book_Item__c/fields/Ticket_Item_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Item_Record_Type__c</fullName>
    <formula>TEXT( Catalog_Item__r.Ticket_Item_Record_Type__c )</formula>
    <inlineHelpText>Ticket item record type for the price book item. The price book item inherits this record type from the linked catalog item.</inlineHelpText>
    <label>Ticket Item Record Type</label>
    <type>Text</type>
</CustomField>