src/main/default/objects/Price_Book_Item__c/validationRules/Default_Qty_Greater_Than_Min_Qty.validationRule-meta.xml
<ValidationRule>
    <fullName>Default_Qty_Greater_Than_Min_Qty</fullName>
    <active>true</active>
    <errorConditionFormula>!ISBLANK(Default_Quantity__c) &amp;&amp; !ISBLANK(Minimum_Quantity__c) &amp;&amp; Default_Quantity__c  &lt;  Minimum_Quantity__c</errorConditionFormula>
    <errorMessage>The Default Quantity must be greater than or equal to the Minimum Quantity.</errorMessage>
</ValidationRule>