src/main/default/objects/Price_Book_Item__c/validationRules/Default_Qty_Less_Than_Max_Qty.validationRule-meta.xml
<ValidationRule>
    <fullName>Default_Qty_Less_Than_Max_Qty</fullName>
    <active>true</active>
    <errorConditionFormula>!ISBLANK(Default_Quantity__c) &amp;&amp; !ISBLANK(Maximum_Quantity__c) &amp;&amp; Default_Quantity__c  >  Maximum_Quantity__c</errorConditionFormula>
    <errorMessage>The Default Quantity must be less than or equal to the Maximum Quantity.</errorMessage>
</ValidationRule>