src/main/default/objects/Price_Book_Item__c/validationRules/Markup_Amount_Rqd_for_CostPlusAmount.validationRule-meta.xml
<ValidationRule>
    <fullName>Markup_Amount_Rqd_for_CostPlusAmount</fullName>
    <active>true</active>
    <description>If the Pricing Method is Cost Plus Markup Amount, the Cost Plus Markup Amount field is required.</description>
    <errorConditionFormula>IsPickVal(Pricing_Method__c , "Cost Plus Markup Amount") &amp;&amp; IsNull( Cost_Plus_Markup_Amount__c )</errorConditionFormula>
    <errorDisplayField>Cost_Plus_Markup_Amount__c</errorDisplayField>
    <errorMessage>You must provide a value for the "Cost Plus Markup Amount" field since you have set the Pricing Method to "Cost Plus Markup Amount"</errorMessage>
</ValidationRule>