src/main/default/objects/Price_Book_Item__c/validationRules/Min_Qty_Cannot_Exceed_Max_Qty.validationRule-meta.xml
<ValidationRule>
    <fullName>Min_Qty_Cannot_Exceed_Max_Qty</fullName>
    <active>true</active>
    <errorConditionFormula>!ISBLANK(Minimum_Quantity__c) &amp;&amp; !ISBLANK(Maximum_Quantity__c) &amp;&amp; Minimum_Quantity__c  >  Maximum_Quantity__c</errorConditionFormula>
    <errorMessage>Minimum Quantity must be either less than or equal to Maximum Quantity or set to nothing.</errorMessage>
</ValidationRule>