src/main/default/objects/Price_Book_Item__c/validationRules/Price_Required_for_Straight_Price.validationRule-meta.xml
<ValidationRule>
    <fullName>Price_Required_for_Straight_Price</fullName>
    <active>true</active>
    <description>If the Pricing Method is Straight Price, the Price field is required.</description>
    <errorConditionFormula>IsPickVal(Pricing_Method__c , "Straight Price") &amp;&amp; IsNull(Price__c)</errorConditionFormula>
    <errorMessage>You must provide a price since you have set the Pricing Method to "Straight Price"</errorMessage>
</ValidationRule>